       SIGUSR1.
* NEW: Add support for long filename mangling.
* NEW: Add a -noslp option to disable SLP per afpd instance.
* NEW: Added -d option for pap to enable debugging at runtime rather than
       compile time.
* NEW: Add the ability to use Concurrent Data Store instead of full
       transactional data store with the CNID DID calculation scheme.
* FIX: Cleaned up pap man page, eliminating duplicate pap man page (8).
* FIX: Print out pap status in postscript (%%[..]%%) format for LPRng
       compatibility.
      
Changes from 1.5.2
==================

* UPD: Extend the --disable-shell-check functionality to ignore users
       with _no_ shell.  Also, send a log message if a user is refused login
       based on the fact that they have no shell.
* FIX: Problems with Photoshop trying to open image files has been
       corrected.
* FIX: Preserve special permission bits when creating or modifying
       directories.
* FIX: afp_deleteid() now deletes the specified file and not the parent
       directory.
* FIX: Clean up some syslog messages.

Changes from 1.5.1
==================

* NEW: NetBSD support contributed by David Rankin and NetBSD contributors.
       This includes a new configure option --enable-netbsd.
* NEW: Add the -client_polling afpd.conf flag to allow for clients to poll
       the server every 10 seconds for open window updates.  Currently
       this is the only way to get asynchronous directory updates.
* UPD: Use separate macro for AFS configure check.
* UPD: Some Perl scripts are now (partially) auto-generated. This improves
       out-of-the-box usage of Netatalk.
* UPD: Solaris Kernel Makefile is now auto-generated. This fixes some path
       issues, but isn't perfect, yet. Added some Solaris compatibility
       fixes to the Kernel sources, too.
* UPD: CNID DB code sync'd with the current CVS version.  NOTE: Using this
       code requires you to delete _all_ existing .AppleDB directories in
       order to avoid database corruption!