@@ -9,6 +9,9 @@ Changes from 1.5.3
        compile time.
 * NEW: Add the ability to use Concurrent Data Store instead of full
        transactional data store with the CNID DID calculation scheme.
+* NEW: Create .AppleDB directories for '~' shares with the umask of the 
+       user.  This avoids creating wide open directories within users'
+       home directories.
 * FIX: Cleaned up pap man page, eliminating duplicate pap man page (8).
 * FIX: Print out pap status in postscript (%%[..]%%) format for LPRng
        compatibility.
